tests/lang/parse-fail-utf8.err.exp
error: syntax error, unexpected invalid token, expecting end of file

       at Â«stdinÂ»:1:5:

            1| 123 Ã
             |     ^
